@@ -8,7 +8,17 @@ import javafx.stage.Stage;
 import java.io.IOException;
 import java.util.Arrays;
 
-public class MainApplication extends Application {
+// ctrl+ctrl -> mvn javafx:jlink , mvn package - snapshot.jar
+/*
+jpackage --input target/ \
+        --name JPackageDemoApp \
+        --main-jar BankDesktopApp-1.0-SNAPSHOT.jar \
+        --main-class hu.petrik.bankdesktopapp.MainApplication \
+        --type EXE \
+        --java-options '--enable-preview'
+
+ */
+        public class MainApplication extends Application {
     @Override
     public void start(Stage stage) throws IOException {
         FXMLLoader fxmlLoader = new FXMLLoader(MainApplication.class.getResource("LoginPage.fxml"));
